--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8081
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/flyway_demo?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=6SvFMWRXOgCaugY9
+spring.datasource.password=123
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -13,6 +13,6 @@ spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=false
 ##\u5F53flyway\u7B2C\u4E00\u6B21\u8FD0\u884C\u65F6\uFF0C\u4F1A\u5728\u6211\u4EEC\u5BF9\u5E94\u7684\u6570\u636E\u5E93\u4E2D\u65B0\u5EFA\u4E00\u4E2A\u8BB0\u5F55\u811A\u672C\u8FD0\u884C\u60C5\u51B5\u7684
 spring.flyway.table=v_sql_version_history
-
-
+spring.flyway.skip-default-callbacks=false
+#flyway.callbacks=com.lacknb.springbootflywaydemo.config.FlywayCallback
 
